crates/agtrace-cli/tests/snapshots/watch_tui__console_initial.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
expression: text
---
watching project demo-project (Ctrl-C to stop)
+ s-lead  running 42%
+   [T] audit-A  idle 12%
+   [T] audit-B  idle 9%
+   [S] explore call sites  done 15%
+   [F] fork: bench  running 75%
+ codex /root  idle 12%
+   judge  running 77%
+     x  running 5%
+   scout  done 15%
12:00 [s-lead] › user Audit the parser with a team of reviewers
12:00 [s-lead] ◆ model claude-opus-5
12:00 [s-lead] • Spawning two reviewers and an explorer.
12:00 [s-lead] ⇢ spawn audit-A (teammate, general-purpose, claude-opus-5)
12:00 [s-lead] ⇢ spawn audit-B (teammate, general-purpose)
12:00 [s-lead] → audit-A NEW_TASK "review parser"
12:00 [s-lead] ⇢ spawn explore call sites (subagent, Explore, claude-sonnet-5)
12:00 [s-lead] ⇢ spawn fork: bench (fork)
12:00 [s-lead] ⏹ interrupted
12:00 [s-lead] ↲ queued also check the tokenizer
12:01 [s-lead] ← audit-A MESSAGE "done, found 3 bugs"
12:01 [s-lead] ◆ model claude-opus-5 → claude-opus-5-5[1m]
12:01 [s-lead] ⟲ compact 974k→112k (auto)
12:01 [s-lead] ◇ audit-B idle
12:02 [s-lead] ◇ explore call sites done
12:02 [s-lead] ← explore call sites TASK_NOTIFY "found 2 call sites"
12:04 [s-lead] ▸ Bash mise run test
12:00 [audit-A] ← s-lead NEW_TASK "review parser"
12:00 [audit-A] ▸ Bash cargo test -p parser
12:00 [audit-A] ✗ error 3 failed
12:01 [audit-A] → s-lead MESSAGE "done, found 3 bugs"
12:01 [audit-A] ─ turn end
12:00 [audit-B] › user scan for panics
12:00 [audit-B] ▸ Bash rg unwrap src/
12:01 [audit-B] • No panics on the hot path.
12:01 [audit-B] ─ turn end
12:00 [explore call sites] › user Find call sites of parse_line
12:00 [explore call sites] ▸ Grep parse_line
12:02 [explore call sites] • Two call sites: decoder.rs and lab.rs.
12:00 [fork: bench] › user benchmark the decoder
12:04 [fork: bench] ▸ Bash cargo bench -p agtrace-providers
12:00 [/root] › user triage the flaky tests
12:00 [/root] ◆ model gpt-5.6
12:00 [/root] ⇢ spawn judge (thread)
12:00 [/root] → /root/judge NEW_TASK [encrypted]
12:00 [/root] ⇢ spawn scout (thread)
12:00 [/root] → /root/scout NEW_TASK [encrypted]
12:02 [/root] ← /root/scout FINAL_ANSWER "3 flaky tests, all in watch_command.rs"
12:02 [/root] ◇ /root/scout done
12:02 [/root] ⟲ compact 240k→? (auto)
12:02 [/root] → /root/judge MESSAGE [encrypted]
12:02 [/root] ─ turn end
12:00 [/root/judge] ← /root NEW_TASK [encrypted]
12:01 [/root/judge] ▸ exec cargo test -p agtrace-cli
12:01 [/root/judge] ↳ cargo test -p agtrace-cli  (exit 101)
12:01 [/root/judge] ↳ git diff --stat
12:01 [/root/judge] ⇢ spawn x (thread)
12:02 [/root/judge] ← /root MESSAGE [encrypted]
12:04 [/root/judge/x] • Reproducing the flake in a loop.
12:00 [/root/scout] ← /root NEW_TASK [encrypted]
12:01 [/root/scout] → /root FINAL_ANSWER "3 flaky tests, all in watch_command.rs"
12:02 [/root/scout] ─ turn end
12:00 ✉ s-lead → audit-A  spawn teammate  general-purpose
12:00 ✉ s-lead → audit-B  spawn teammate  general-purpose
12:00 ✉ s-lead → audit-A  NEW_TASK  "review parser"
12:00 ✉ s-lead → explore call sites  spawn subagent  Explore
12:00 ✉ s-lead → fork: bench  spawn fork
12:00 ✉ /root → /root/judge  spawn thread
12:00 ✉ /root → /root/judge  NEW_TASK  [encrypted]
12:00 ✉ /root → /root/scout  spawn thread
12:00 ✉ /root → /root/scout  NEW_TASK  [encrypted]
12:01 ✉ audit-A → s-lead  MESSAGE  "done, found 3 bugs"
12:01 ✉ /root/judge → /root/judge/x  spawn thread
12:01 ✉ audit-B  idle
12:02 ✉ /root/scout → /root  FINAL_ANSWER  "3 flaky tests, all in watch_command.rs"
12:02 ✉ /root/scout  done
12:02 ✉ /root → /root/judge  MESSAGE  [encrypted]
12:02 ✉ explore call sites  done
12:02 ✉ explore call sites → s-lead  TASK_NOTIFY  "found 2 call sites"
