crates/agtrace-cli/tests/snapshots/watch_tui__presenter_default_screen.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
expression: "screen(&view, &ui())"
---
{
  "screen": "agents",
  "tree": [
    {
      "id": "codex:t-root",
      "depth": 0,
      "guides": [],
      "is_last_sibling": false,
      "label": "/root",
      "provider": "codex",
      "badge": null,
      "status": "idle",
      "ctx_pct": 12,
      "selected": true,
      "collapsed": false,
      "has_children": true,
      "hidden_descendants": 0,
      "busy_tool": false
    },
    {
      "id": "codex:t-judge",
      "depth": 1,
      "guides": [],
      "is_last_sibling": false,
      "label": "judge",
      "provider": "codex",
      "badge": null,
      "status": "running",
      "ctx_pct": 77,
      "selected": false,
      "collapsed": false,
      "has_children": true,
      "hidden_descendants": 0,
      "busy_tool": true
    },
    {
      "id": "codex:t-judge-x",
      "depth": 2,
      "guides": [
        true
      ],
      "is_last_sibling": true,
      "label": "x",
      "provider": "codex",
      "badge": null,
      "status": "running",
      "ctx_pct": 5,
      "selected": false,
      "collapsed": false,
      "has_children": false,
      "hidden_descendants": 0,
      "busy_tool": false
    },
    {
      "id": "codex:t-scout",
      "depth": 1,
      "guides": [],
      "is_last_sibling": true,
      "label": "scout",
      "provider": "codex",
      "badge": null,
      "status": "done",
      "ctx_pct": 15,
      "selected": false,
      "collapsed": false,
      "has_children": false,
      "hidden_descendants": 0,
      "busy_tool": false
    },
    {
      "id": "claude:s-lead",
      "depth": 0,
      "guides": [],
      "is_last_sibling": true,
      "label": "s-lead",
      "provider": "claude_code",
      "badge": null,
      "status": "running",
      "ctx_pct": 42,
      "selected": false,
      "collapsed": false,
      "has_children": true,
      "hidden_descendants": 0,
      "busy_tool": true
    },
    {
      "id": "claude:s-audit-a",
      "depth": 1,
      "guides": [],
      "is_last_sibling": false,
      "label": "audit-A",
      "provider": "claude_code",
      "badge": "T",
      "status": "idle",
      "ctx_pct": 12,
      "selected": false,
      "collapsed": false,
      "has_children": false,
      "hidden_descendants": 0,
      "busy_tool": false
    },
    {
      "id": "claude:s-audit-b",
      "depth": 1,
      "guides": [],
      "is_last_sibling": false,
      "label": "audit-B",
      "provider": "claude_code",
      "badge": "T",
      "status": "idle",
      "ctx_pct": 9,
      "selected": false,
      "collapsed": false,
      "has_children": false,
      "hidden_descendants": 0,
      "busy_tool": false
    },
    {
      "id": "claude:s-lead/a7ac2e91",
      "depth": 1,
      "guides": [],
      "is_last_sibling": false,
      "label": "explore call sites",
      "provider": "claude_code",
      "badge": "S",
      "status": "done",
      "ctx_pct": 15,
      "selected": false,
      "collapsed": false,
      "has_children": false,
      "hidden_descendants": 0,
      "busy_tool": false
    },
    {
      "id": "claude:s-lead/f0cc1a22",
      "depth": 1,
      "guides": [],
      "is_last_sibling": true,
      "label": "fork: bench",
      "provider": "claude_code",
      "badge": "F",
      "status": "running",
      "ctx_pct": 75,
      "selected": false,
      "collapsed": false,
      "has_children": false,
      "hidden_descendants": 0,
      "busy_tool": true
    }
  ],
  "focus": {
    "agent_id": "codex:t-root",
    "title": "/root",
    "provider": "codex",
    "kind": "main",
    "team": null,
    "status": "idle",
    "model": "gpt-5.6",
    "ctx": {
      "pct": 12,
      "used_tokens": 31000,
      "window_tokens": 258400,
      "provenance": "log"
    },
    "activity": {
      "type": "turn_ended",
      "outcome": "completed",
      "ago_secs": 159
    },
    "rows": [
      {
        "time": "12:00",
        "icon": "›",
        "kind": "user",
        "label": "user",
        "text": "triage the flaky tests"
      },
      {
        "time": "12:00",
        "icon": "◆",
        "kind": "model_change",
        "label": "model",
        "text": "gpt-5.6"
      },
      {
        "time": "12:00",
        "icon": "⇢",
        "kind": "spawn",
        "label": "spawn",
        "text": "judge (thread)"
      },
      {
        "time": "12:00",
        "icon": "→",
        "kind": "message_out",
        "label": "/root/judge",
        "text": "NEW_TASK [encrypted]"
      },
      {
        "time": "12:00",
        "icon": "⇢",
        "kind": "spawn",
        "label": "spawn",
        "text": "scout (thread)"
      },
      {
        "time": "12:00",
        "icon": "→",
        "kind": "message_out",
        "label": "/root/scout",
        "text": "NEW_TASK [encrypted]"
      },
      {
        "time": "12:02",
        "icon": "←",
        "kind": "message_in",
        "label": "/root/scout",
        "text": "FINAL_ANSWER \"3 flaky tests, all in watch_command.rs\""
      },
      {
        "time": "12:02",
        "icon": "◇",
        "kind": "lifecycle",
        "label": "/root/scout",
        "text": "done"
      },
      {
        "time": "12:02",
        "icon": "⟲",
        "kind": "compaction",
        "label": "compact",
        "text": "240k→? (auto)"
      },
      {
        "time": "12:02",
        "icon": "→",
        "kind": "message_out",
        "label": "/root/judge",
        "text": "MESSAGE [encrypted]"
      },
      {
        "time": "12:02",
        "icon": "─",
        "kind": "turn_end",
        "label": "turn end",
        "text": ""
      }
    ],
    "follow": true
  },
  "feed": [
    {
      "time": "12:00",
      "kind": "spawn",
      "from": "s-lead",
      "to": [
        "audit-A"
      ],
      "tag": "spawn teammate",
      "text": "general-purpose",
      "encrypted": false,
      "involves_selected": false
    },
    {
      "time": "12:00",
      "kind": "spawn",
      "from": "s-lead",
      "to": [
        "audit-B"
      ],
      "tag": "spawn teammate",
      "text": "general-purpose",
      "encrypted": false,
      "involves_selected": false
    },
    {
      "time": "12:00",
      "kind": "message",
      "from": "s-lead",
      "to": [
        "audit-A"
      ],
      "tag": "NEW_TASK",
      "text": "review parser",
      "encrypted": false,
      "involves_selected": false
    },
    {
      "time": "12:00",
      "kind": "spawn",
      "from": "s-lead",
      "to": [
        "explore call sites"
      ],
      "tag": "spawn subagent",
      "text": "Explore",
      "encrypted": false,
      "involves_selected": false
    },
    {
      "time": "12:00",
      "kind": "spawn",
      "from": "s-lead",
      "to": [
        "fork: bench"
      ],
      "tag": "spawn fork",
      "text": null,
      "encrypted": false,
      "involves_selected": false
    },
    {
      "time": "12:00",
      "kind": "spawn",
      "from": "/root",
      "to": [
        "/root/judge"
      ],
      "tag": "spawn thread",
      "text": null,
      "encrypted": false,
      "involves_selected": true
    },
    {
      "time": "12:00",
      "kind": "message",
      "from": "/root",
      "to": [
        "/root/judge"
      ],
      "tag": "NEW_TASK",
      "text": null,
      "encrypted": true,
      "involves_selected": true
    },
    {
      "time": "12:00",
      "kind": "spawn",
      "from": "/root",
      "to": [
        "/root/scout"
      ],
      "tag": "spawn thread",
      "text": null,
      "encrypted": false,
      "involves_selected": true
    },
    {
      "time": "12:00",
      "kind": "message",
      "from": "/root",
      "to": [
        "/root/scout"
      ],
      "tag": "NEW_TASK",
      "text": null,
      "encrypted": true,
      "involves_selected": true
    },
    {
      "time": "12:01",
      "kind": "message",
      "from": "audit-A",
      "to": [
        "s-lead"
      ],
      "tag": "MESSAGE",
      "text": "done, found 3 bugs",
      "encrypted": false,
      "involves_selected": false
    },
    {
      "time": "12:01",
      "kind": "spawn",
      "from": "/root/judge",
      "to": [
        "/root/judge/x"
      ],
      "tag": "spawn thread",
      "text": null,
      "encrypted": false,
      "involves_selected": false
    },
    {
      "time": "12:01",
      "kind": "lifecycle",
      "from": "audit-B",
      "to": [],
      "tag": "idle",
      "text": null,
      "encrypted": false,
      "involves_selected": false
    },
    {
      "time": "12:02",
      "kind": "message",
      "from": "/root/scout",
      "to": [
        "/root"
      ],
      "tag": "FINAL_ANSWER",
      "text": "3 flaky tests, all in watch_command.rs",
      "encrypted": false,
      "involves_selected": true
    },
    {
      "time": "12:02",
      "kind": "lifecycle",
      "from": "/root/scout",
      "to": [],
      "tag": "done",
      "text": null,
      "encrypted": false,
      "involves_selected": true
    },
    {
      "time": "12:02",
      "kind": "message",
      "from": "/root",
      "to": [
        "/root/judge"
      ],
      "tag": "MESSAGE",
      "text": null,
      "encrypted": true,
      "involves_selected": true
    },
    {
      "time": "12:02",
      "kind": "lifecycle",
      "from": "explore call sites",
      "to": [],
      "tag": "done",
      "text": null,
      "encrypted": false,
      "involves_selected": false
    },
    {
      "time": "12:02",
      "kind": "message",
      "from": "explore call sites",
      "to": [
        "s-lead"
      ],
      "tag": "TASK_NOTIFY",
      "text": "found 2 call sites",
      "encrypted": false,
      "involves_selected": false
    }
  ],
  "status": {
    "scope": "project demo-project",
    "agents": 9,
    "running": 4,
    "idle": 3,
    "hidden": 0,
    "done_hideable": 2,
    "diagnostics": 0,
    "errors": 0,
    "last_error": null,
    "feed_filter": "all",
    "hide_done": false,
    "auto_select": false,
    "collapsed": 0,
    "filter": "",
    "filter_editing": false,
    "matches": 0
  },
  "focus_pane": "tree",
  "timeline_scroll": "follow",
  "feed_scroll": "follow",
  "show_help": false,
  "toast": null
}
