crates/agtrace-cli/tests/snapshots/watch_tui__presenter_tree_done_fold_and_collapse.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
expression: "rows.join(\"\\n\")"
---
Audit the parser with a team of reviewers Running collapsed=false hidden=0
  audit-A Idle collapsed=false hidden=0
  audit-B Idle collapsed=false hidden=0
  explore call sites Done collapsed=false hidden=0
  fork: bench Running collapsed=false hidden=0
triage the flaky tests Idle collapsed=true hidden=3
