crates/agtrace-cli/tests/snapshots/watch_tui__presenter_tree_hide_done_and_collapse.snap
---
source: crates/agtrace-cli/tests/watch_tui.rs
assertion_line: 81
expression: "rows.join(\"\\n\")"
---
/root Idle collapsed=true hidden=2
s-lead Running collapsed=false hidden=0
  audit-A Idle collapsed=false hidden=0
  audit-B Idle collapsed=false hidden=0
  fork: bench Running collapsed=false hidden=0
